--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,892 @@
-.App {
-  text-align: center;
+
+
+nav {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+nav li {
+  margin-left: 1rem;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+}
+
+main {
+  margin-top: 2rem;
+}
+p{
+  font-family: Montserrat;
+}
+button {
+  padding: 0.5rem 1rem;
+  margin-right: 1rem;
+  border: none;
+  border-radius: 0.25rem;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0069d9;
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  background-image: url( './images/blobanimation.svg' );
+  background-repeat: no-repeat;
+  margin-top: 5%;
+  }
+.svg{
+  height: 500px;
+  object-fit: contain;
+  position: relative;
+  margin:auto;
+  animation: animate 6s ease-in-out infinite;
+}
+@keyframes animate{
+	0% {
+		
+		transform: translatey(0px);
+	}
+	50% {
+		
+		transform: translatey(-20px);
+	}
+	100% {
+		
+		transform: translatey(0px);
+	}
+}
+.title{
+  color: white;
+  font-size: 50px;
+  margin-bottom: 0px;
+}
+
+.subtitle{
+  color:white;
+  font-size: 20px;
+}
+.plant1{
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  position: relative;
+  margin:auto;
+  animation: animatePlant1 6s ease-in-out infinite;
+}
+@keyframes animatePlant1{
+  0% {
+		
+		transform: translatey(0px);
+	}
+	50% {
+		
+		transform: translatey(-10px);
+	}
+	100% {
+		
+		transform: translatey(0px);
+	}
+
+}
+.plant2{
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+  position: relative;
+  margin:auto;
+  animation: animatePlant2 6s ease-in-out infinite;
+  
+}
+@keyframes animatePlant2{
+  0% {
+		
+		transform: translatey(5px);
+	}
+	50% {
+		
+		transform: translatey(15px);
+	}
+	100% {
+		
+		transform: translatey(5px);
+	}
+}
+
+
+  
+  .div_plant1 { grid-area: 1 /2 / 4 / 3; }
+  .div_planet1{ grid-area: 3 /1 / 4 /6;}
+  .div_planet2{ grid-area: 1 /5/ 4/ 4;}
+  .div_svg { grid-area: 2 / 2 / 5 / 4; 
+    }
+  .div_plant2 { grid-area: 3 / 5 / 4 / 6; } 
+  .div_star3 { 
+    grid-area: 2/ 5 / 3/ 6; 
+  } 
+  .div_star { 
+    grid-area: 3/ 1 / 3/ 6; 
+  } 
+  .div_star2 { 
+    grid-area: 3/ 1 / 3/ 6; 
+  } 
+  .div_star4 { 
+    grid-area: 4/ 5 / 3/ 6; 
+  } 
+  .div_headset { 
+    grid-area: 2 / 1 / 3 / 6; 
+  } 
+
+
+  .main{
+    display: flex;
+  }
+  .interduction{
+    width: 50%;
+    padding-left: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .interduction-text{
+    color:white;
+    padding-bottom: 20px;
+  }
+  .interduction-txt-div{
+    padding-right: 30%;
+  }
+  .planet1{
+    height: 60px;
+    object-fit: contain;
+  position: relative;
+  margin:auto;
+
+  }
+  
+  .planet2{
+    height: 150px;
+    object-fit: contain;
+  position: relative;
+  margin:auto;
+
+  }
+
+  .star{
+    margin-top:-60px;
+    margin-bottom: 70px;
+    height: 40px;
+    position: relative;
+   
+    animation: animateStar 4s infinite ease alternate;
+  }
+  @keyframes animateStar{
+    from {opacity: 1;}
+    to {opacity: 0.1;}
+  }
+
+  .star2{
+    margin-top:-40px;
+    margin-bottom: 70px;
+    margin-left: 70px;
+    height: 20px;
+    position: relative;
+   
+   
+    animation: animateStar2 2s infinite ease alternate;
+  }
+
+  @keyframes animateStar2 {
+    from {opacity: 1;}
+    to {opacity: 0.4;}
+}
+
+
+  .star3{
+    height: 50px;
+    position: relative;
+   
+    animation: animateStar3 1s infinite ease alternate;
+  }
+  @keyframes animateStar3 {
+    from {opacity: 0.1;}
+    to {opacity: 1;}
+}
+.star4{
+  height: 20px;
+  position: relative;
+ 
+  animation: animateStar3 1s infinite ease alternate;
+}
+@keyframes animateStar3 {
+  from {opacity: 1;}
+  to {opacity: 0.5;}
+}
+
+.headset{
+  height: 130px;
+  position: relative;
+  animation: animateHeadset 6s ease-in-out infinite;
+ 
+  
+}
+@keyframes animateHeadset{
+  0% {
+		
+		transform: translatey(-5px);
+	}
+	50% {
+		
+		transform: translatey(-10px);
+	}
+	100% {
+		
+		transform: translatey(-5px);
+	}
+}
+.btn1 {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.8);
+  background-color:#232163;
+  padding: 15px 40px;
+  border-radius: 30px;
+  font-family: Montserrat;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+  margin-right: 15px;
+}
+.btn1:hover {
+  color: #232163;
+  background: rgb(255, 233, 177);
+  box-shadow: 0px 0px 40px 18px rgba(255, 233, 177, .4);
+}
+
+.btn2 {
+  text-decoration: none;
+  color: #cebbff;
+  background-color:#3b348660;
+  padding: 15px 40px;
+  border-radius: 30px;
+  font-family: Montserrat;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+  margin-right: 15px;
+  width: 150px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+.btn2:hover {
+  color: #232163;
+  background: #e5c7e2;
+  box-shadow: 0px 0px 40px 18px rgba(255, 233, 177, .4);
+
+}
+.download-icon{
+ margin: 0;
+ height: 20px;
+ width: 20px;
+}
+.header{
+  padding-top: 15px;
+  padding-right: 15px;
+  
+}
+.experience{
+  display: flex;
+  flex-direction:row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100vw;
+}
+canvas{
+display: flex !important;
+flex-direction: column;
+justify-items: center;
+justify-content: center;
+align-items: center;
+
+
+}
+.canvas{
+  display: flex !important;
+  flex-direction: column;
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
+  height: 50vh !important;
+  width:50vw !important;
+  
+  }
+.title-subpage{
+  color: #3b3486;
+  font-size: 40px;
+  font-family: Montserrat;
+}
+.reactlogo{
+  height: 40px;
+  animation: circle1 20s linear infinite;
+  z-index: 10;
+ 
+}
+.reactlogo:hover{
+  -webkit-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -o-animation-play-state:paused;;
+  animation-play-state:paused;
+}
+@keyframes circle1 {
+  0%{
+    transform:rotate(0deg)
+              translate(-200px)
+              rotate(0deg)
+
+  }
+  100%{
+    transform:rotate(360deg)
+              translate(-200px)
+              rotate(720deg)
+
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logos{
+  padding-top: 30px;
+  position: absolute; 
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+  
+}
+.brain{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 60vw;
+  height:100vh;
+  background: radial-gradient(circle, rgba(255,233,177,1) 0%, rgba(182,157,244,1) 44%);
+}
+
+.springlogo{
+  height: 40px;
+  animation: circle2 35s linear infinite;
+  z-index: 10;
+}
+.springlogo:hover{
+  -webkit-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -o-animation-play-state:paused;;
+  animation-play-state:paused;
+}
+@keyframes circle2 {
+  0%{
+    transform:rotate(360deg)
+              translate(-400px)
+           
+  
+  }
+  100%{
+    transform:rotate(0deg)
+              translate(-400px)
+              
+  }
+}
+
+.vaadinlogo{
+  height: 40px;
+  animation: circle3 50s linear infinite;
+  z-index: 10;
+}
+.vaadinlogo:hover{
+  -webkit-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -o-animation-play-state:paused;;
+  animation-play-state:paused;
+}
+@keyframes circle3 {
+  0%{
+    transform:rotate(360deg)
+              translate(-300px)
+           
+  
+  }
+  100%{
+    transform:rotate(0deg)
+              translate(-300px)
+              
+  }
+}
+
+.threelogo{
+  height: 25px;
+  animation: circle4 50s linear infinite;
+  z-index: 10;
+
+  
+}
+.threelogo:hover{
+  -webkit-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -o-animation-play-state:paused;;
+  animation-play-state:paused;
+}
+@keyframes circle4 {
+  0%{
+    transform:rotate(0deg)
+              translate(-150px)
+              rotate(720deg)
+  
+  }
+  100%{
+    transform:rotate(360deg)
+              translate(-150px)
+              rotate(0deg)
+  }
+}
+.reactCircle{
+  width:400px;
+  height:400px;
+  border:1px solid #f8ffdf63;
+  position:absolute;
+  border-radius:50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.vaadinCircle{
+  width:800px;
+  height:800px;
+  border:1px solid #f8ffdf28;
+  position:absolute;
+  border-radius:50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.springCircle{
+  width:600px;
+  height:600px;
+  border:1px solid #f8ffdf63;
+  position:absolute;
+  border-radius:50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.threeCircle{
+  width:300px;
+  height:300px;
+  border:1px solid #f8ffdf2d;
+  position:absolute;
+  border-radius:50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.htmlCircle{
+  width:600px;
+  height:600px;
+  border:1px solid #f8ffdf2d;
+  position:absolute;
+  border-radius:50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cssCircle{
+  width:700px;
+  height:700px;
+  border:1px solid #f8ffdf2d;
+  position:absolute;
+  border-radius:50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.javaCircle{
+  width:950px;
+  height:950px;
+  border:1px solid #f8ffdf2d;
+  position:absolute;
+  border-radius:50%; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.experience-txt{
+  height: 100vh;
+  width: 30vw;
+  display: flex;
+  padding-right: 10vw;
+  align-items: center;
+  z-index: 100;
+}
+
+
+.javalogo{
+  height: 40px;
+  animation: circlePlanet2 50s linear infinite;
+  z-index: 10;
+}
+.javalogo:hover{
+  -webkit-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -o-animation-play-state:paused;;
+  animation-play-state:paused;
+}
+@keyframes circlePlanet2 {
+  0%{
+    transform:rotate(360deg)
+              translate(-400px)
+              rotate(65deg)
+           
+  
+  }
+  100%{
+    transform:rotate(0deg)
+              translate(-400px)
+              rotate(65deg)
+              
+  }
+}
+
+.planetlogo{
+  height: 40px;
+  animation: circle3 50s linear infinite;
+  z-index: 10;
+}
+.planetlogo:hover{
+  -webkit-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -o-animation-play-state:paused;;
+  animation-play-state:paused;
+}
+@keyframes circle3 {
+  0%{
+    transform:rotate(360deg)
+              translate(-300px)
+              rotate(65deg)
+             
+           
+  
+  }
+  100%{
+    transform:rotate(0deg)
+              translate(-300px)
+              rotate(65deg)
+  }
+}
+
+.csslogo{
+  height: 40px;
+  animation: circleCss 70s linear infinite;
+  z-index: 10;
+}
+.csslogo:hover{
+  -webkit-animation-play-state:paused;
+  -moz-animation-play-state:paused;
+  -o-animation-play-state:paused;;
+  animation-play-state:paused;
+}
+@keyframes circleCss {
+  0%{
+    transform:rotate(0deg)
+              translate(-475px)
+              rotate(1080deg)
+  
+  }
+  100%{
+    transform:rotate(360deg)
+              translate(-475px)
+              rotate(0deg)
+  }
+}
+
+.default-gif{
+  height: 20%;
+}
+.walkingboard{
+ display: flex;
+ justify-content: center;
+}
+.board-div{
+  width: 100vw;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+}
+.about-div{
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 20vh;
+}
+.about-title{
   color: white;
+  font-size: 40px;
+  font-family: VT323;
+  
+}
+.hobbies-div{
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+}
+.hobbies-txt{
+  width: 40vw;
+  height: 10vh;
+  margin-bottom: 6vh;
+  background-color: #00000260;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
-.App-link {
-  color: #61dafb;
+.click-me-txt{
+  font-family: VT323;
+  color:white;
+  font-size: 25px;
+  animation: blinker 1s linear infinite;
+
+}
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.pop-up-enter {
+  transform: translateY(100%);
+}
+
+.pop-up-enter-active {
+  transform: translateY(0);
+  transition: transform 400ms;
+}
+.expl-hobbies-txt{
+  color: white;
+  font-family: VT323;
+  font-size: 20px;
+}
+.typewriter {
+  color:white;
+  font-family: VT323;
+  background:
+    linear-gradient(-90deg,#ffffff 5px,#0000 0) 10px 0,
+    linear-gradient(#ffffff 0 0) 0 0;
+  background-size:calc(var(--n)*1ch) 200%;
+  -webkit-background-clip:padding-box,text;
+  background-clip:padding-box,text;
+  background-repeat:no-repeat;
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  animation: 
+  b .7s infinite steps(1),   
+  t calc(var(--n)*.3s) steps(var(--n)) forwards;
+
+}
+@keyframes t{
+  from {background-size:0 200%}
+}
+@keyframes b{
+  50% {background-position:0 -100%,0 0}
+}
+.icon-transition-enter{
+  transform: translateY(100%);
+}
+.icon-transition-enter-active{
+  transform: translateY(0);
+  transition: transform 400ms;
+}
+.contact-p{
+  font-family: Montserrat;
+  color: #7d7aaa;
+  font-size: 20px;
+  
+  display: flex;
+
+}
+
+.footer-plant-px{
+  height: 80px;
+}
+
+.footer-div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footer-title{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 40px;
+}
+.contact-p2{
+  color: #605e85;
+  text-align: center;
+}
+.contact-p2-div{
+  width: 50%;
+  font-family: Montserrat;
+}
+.contact-icon{
+  color: #605e85;
+  width: 25px;
+  height: 20px;
+}
+.footer-icons{
+  display: flex;
+  flex-direction: row;
+  width: 20vw;
+  justify-content: space-around;
+}
+.icon-circle{
+  border: #605e85 1px solid;
+  border-radius: 50%;
+  padding:10px;
+}
+.exp-txt-content{
+  backdrop-filter: blur(2px);
+  z-index: 100;
+}
+
+.p-subpage{
+  color: #110c2d;
+  font-family: Montserrat;
+  padding-bottom: 20px;
+}
+.p-sub-title-subpage{
+  color: #110c2d;
+  font-size: 20px;
+}
+/* Styles for mobile */
+
+@media (max-width: 460px) {
+ 
+  .hobbies-txt{
+    width: 100vw; 
+    height: 16vh;
+    margin-bottom: 0vh;
+
   }
-  to {
-    transform: rotate(360deg);
+  .typewriter{
+    width: fit-content;
+    
+
   }
+  .expl-hobbies-txt{
+    max-width: 90vw;
+    
+  }
+  .canvas{
+    position: relative;
+    width: 100vw !important;
+  }
+  .exp-txt-content{
+    position:relative;
+    width: 100vw;
+    height: 83vh;
+    display: flex;
+    flex-direction: column;
+
+    
+  }
+  .p-subpage{
+
+  
+    padding-top: 3vh;
+    padding-bottom: 10px;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    border-radius: 160px;
+    z-index: 100;
+    backdrop-filter: blur(2px);
+  }
+  .experience-txt{
+    width: 100vw;
+    position: absolute;
+    padding:0px;
+  }
+  .brain{
+    width: 100vw;
+    margin-bottom: 20vh;
+  }
+  .svg{
+    height: 300px;
+  }
+  .interduction{
+    position: absolute;
+    width: 80%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .div_svg{
+    grid-area: 2 / 3 / 4 / 4;
+  }
+  .subtitle-div{
+    padding-bottom: 39vh;
+  }
+  .title{
+    margin-top: 0px;
+  }
+  .div_plant1 {
+    grid-area: 2 / 2 / 4 / 3;
+  }
+  .div_headset {
+    grid-area: 4 / 2 / 4 / 6;
+  }
+  .div_planet1 {
+    grid-area: 4 /4 / 4 /4;
+  }
+  .interduction-txt-div {
+    padding-right: 0%;
+    z-index: 100;
+    backdrop-filter: blur(2px);
+    padding: 10px;
+  }
+  .div_star3 {
+    grid-area: 2/ 5 / 4/ 4;
+  }
+  .div_star {
+    grid-area: 2/ 1 / 3/ 6;
+  }
+  .btn1{
+    width: 100%;
+  }
+  .btn2{
+    width: 80%;
+    align-self: center;
+    margin:0;
+  }
+  .title-subpage{
+    padding-bottom: 39vh;
+    padding-left: 10vw;
+  }
+
+
 }
