--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ nav li {
 }
 
 nav a {
-  color: white;
+  color: rgba(255, 255, 255, 0.521);
   text-decoration: none;
 }
 
@@ -690,8 +690,9 @@ align-items: center;
   font-size: 20px;
 }
 .typewriter {
-  color:white;
+
   font-family: VT323;
+  color:#0000;
   background:
     linear-gradient(-90deg,#ffffff 5px,#0000 0) 10px 0,
     linear-gradient(#ffffff 0 0) 0 0;
@@ -699,11 +700,9 @@ align-items: center;
   -webkit-background-clip:padding-box,text;
   background-clip:padding-box,text;
   background-repeat:no-repeat;
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   animation: 
-  b .7s infinite steps(1),   
-  t calc(var(--n)*.3s) steps(var(--n)) forwards;
-
+    b .7s infinite steps(1),   
+    t calc(var(--n)*.1s) steps(var(--n)) forwards;
 }
 @keyframes t{
   from {background-size:0 200%}
@@ -781,6 +780,7 @@ align-items: center;
 .p-sub-title-subpage{
   color: #110c2d;
   font-size: 20px;
+
 }
 /* Styles for mobile */
 
@@ -801,6 +801,9 @@ align-items: center;
     max-width: 90vw;
     
   }
+  .hobbies-p{
+    width: 80vw;
+  }
   .canvas{
     position: relative;
     width: 100vw !important;
@@ -808,17 +811,14 @@ align-items: center;
   .exp-txt-content{
     position:relative;
     width: 100vw;
-    height: 83vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 
     
   }
   .p-subpage{
-
-  
-    padding-top: 3vh;
-    padding-bottom: 10px;
     padding-left: 10vw;
     padding-right: 10vw;
     border-radius: 160px;
@@ -835,7 +835,7 @@ align-items: center;
     margin-bottom: 20vh;
   }
   .svg{
-    height: 300px;
+    height: 330px;
   }
   .interduction{
     position: absolute;
@@ -861,13 +861,14 @@ align-items: center;
     grid-area: 4 / 2 / 4 / 6;
   }
   .div_planet1 {
-    grid-area: 4 /4 / 4 /4;
+    grid-area: 4 /4 / 3 /4;
   }
   .interduction-txt-div {
     padding-right: 0%;
     z-index: 100;
     backdrop-filter: blur(2px);
     padding: 10px;
+    border-radius: 5p0x;
   }
   .div_star3 {
     grid-area: 2/ 5 / 4/ 4;
@@ -881,12 +882,42 @@ align-items: center;
   .btn2{
     width: 80%;
     align-self: center;
-    margin:0;
+    justify-content: center !important;
+    margin-bottom: 3vh;
   }
   .title-subpage{
-    padding-bottom: 39vh;
+    
     padding-left: 10vw;
+    padding-top: 2rem;
   }
+  nav a {
+    display: none;
+  }
+  .exp-bottom{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .p-sub-title-subpage{
+    color: #110c2d;
+    font-size: 20px;
+    padding-left: 10vw;
+    padding-right: 10vw;
+  }
+  .footer-plant-px{
+    height: 50px;
+  }
+  .contact-p2{
+    width: 80vw;
+    text-align: center;
+  }
+  .contact-p2-div{
+    width: 80vw;
+  }
+  .footer-icons{
+    width: 60%;
+  }
+
 
 
 }
