--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css2?family=VT323:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;600;700&display=swap');
 
 nav {
   display: flex;
@@ -169,6 +170,7 @@ button:hover {
   }
   .interduction-txt-div{
     padding-right: 30%;
+    border-radius: 20%;
   }
   .planet1{
     height: 60px;
@@ -784,7 +786,7 @@ align-items: center;
 }
 /* Styles for mobile */
 
-@media (max-width: 460px) {
+@media (max-width: 768px) {
  
   .hobbies-txt{
     width: 100vw; 
@@ -803,6 +805,7 @@ align-items: center;
   }
   .hobbies-p{
     width: 80vw;
+    text-align: center;
   }
   .canvas{
     position: relative;
@@ -919,5 +922,68 @@ align-items: center;
   }
 
 
+
+}
+/*style for pixel6*/
+
+@media only screen  
+and (max-device-height : 1023px)
+and (min-device-height: 850px) 
+and (max-device-width: 500px){
+  .exp-txt-content{
+    height: 80vh;}
+  .title-subpage {
+    padding-left: 10vw;
+    padding-top:0px;
+    margin-top: 0px;
+    
+  }
+  .subtitle-div {
+    padding-bottom: 33vh;
+  }
+  .hobbies-txt{
+    height: 20vh;
+  }
+
+  .hobbies-p{
+    padding-bottom: 5vh;
+  
+  }
+  
+}
+/* Styles for small laptops/ tablets */
+@media only screen   
+and (min-device-width : 768px)   
+and (max-device-height: 800px )
+{ .svg{
+  height: 400px;
+}} 
+
+/*Styles for weird ass laptops*/
+@media (max-device-height: 650px ) {
+  .svg{
+    height: 300px;
+  }
+  #contact-section{
+    height: 58vh;
+  }
+  .title-subpage{
+    font-size: 25px;
+  }
+  .headset{
+    height: 80px;
+  }
+}
+/*styles for big screens*/
+@media (min-device-width: 2000px){
+  p{
+    font-size: 18px;
+  }
+  .subtitle,.p-sub-title-subpage{
+    font-size: 23px;
+  }
+  .svg{
+    height: 600px;
+  }
 
 }
